added changes to UI

--- a/searchResults.html
+++ b/searchResults.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="searchResults.css" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="searchResults.js"></script>
 </head>
@@ -18,6 +19,11 @@
   <nav>
     <div class="container-fluid">
       <form action="/action_page.php">
+        <div class="row">
+          <div id="searchBar" class="col-lg text-center">
+            <input type="text" name="search" placeholder="Search your craving" />
+          </div>
+        </div>
         <div class="row">
           <div class="col-lg text-center">
             <span>Distance:</span><br />
@@ -308,12 +314,12 @@
   </main>
 
   <footer>
-    <a class="circleButton">&#8249;</a>
-    <a class="circleButton">&#8250;</a>
-    <a class="circleButton">&#8249;</a>
+    <button class="circleButton"></button>
+    <button class="circleButton"></button>
+    <button class="circleButton"></button>
     <div class="rightdiv">
-      <a href="#" class="previous circleButton">&#8249;</a>
-      <a href="#" class="next circleButton">&#8250;</a>
+      <button class="circleButton"></button>
+      <button class="circleButton"></button>
     </div>
   </footer>
 
