--- a/home.html
+++ b/home.html
@@ -32,6 +32,7 @@
               <input class="form-control" type="search" placeholder="What's your crave?" aria-label="Search">
 
               <button class="btn btn-outline-default search" type="submit">Search</button>
+              <a class="nav-link" href="searchResults.html">Search</a>
 
             </form>
 
@@ -65,7 +66,7 @@
 
                 <li class="nav-item">
 
-                    <a class="nav-link" href="#">About</a>
+                    <a class="nav-link" href="about.html">About</a>
 
                 </li>
 
