--- a/home.html
+++ b/home.html
@@ -21,7 +21,7 @@
 
 <div class="box-center">
 
-<img src="https://i.ibb.co/mTyQRZQ/LogoOpt.png" alt="Crave Logo" style="float:center;width:600px;height:400px;">
+<img src="LogoOpt.png" alt="Crave Logo" style="float:center;width:600px;height:400px;">
 
 </div>
 
