--- a/home.html
+++ b/home.html
@@ -14,25 +14,20 @@
 
         crossorigin="anonymous">
 
-        <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="home.css">
 
 </head>
 
-
-<div class="box-center">
-
-<img src="LogoOpt.png" alt="Crave Logo" style="float:center;width:600px;height:400px;">
-
-</div>
+<div class="shadow"><img class="logo" src="https://i.ibb.co/mTyQRZQ/LogoOpt.png" alt="Crave Logo" /></div>
 
 <div class="search_bar">
   
             <form class="form-inline">
 
               <input class="form-control" type="search" placeholder="What's your crave?" aria-label="Search">
-
-              <button class="btn btn-outline-default search" type="submit">Search</button>
-
+              
+              <a href="searchResults.html" class="btn btn-danger">Search</a>
+                    
             </form>
 
 </div>    
