--- a/home.html
+++ b/home.html
@@ -18,7 +18,7 @@
 
 </head>
 
-<div class="shadow"><img class="logo" src="https://i.ibb.co/mTyQRZQ/LogoOpt.png" alt="Crave Logo" /></div>
+<div class="shadow"><img class="logo" src="LogoOpt.png" alt="Crave Logo" /></div>
 
 <div class="search_bar">
   
@@ -31,56 +31,5 @@
             </form>
 
 </div>    
-
-<footer class="footer fotter-light bg-light fixed-bottom">
-
-<section>
-
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-
-        <a class="navbar-brand" href="#"></a>
-
-            <ul class="navbar-nav">
-
-                <li class="nav-item active">
-
-                    <a class="nav-link" href="#">Home
-
-                        <span class="sr-only">(current)</span>
-
-                    </a>
-
-                </li>
-
-                <li class="nav-item">
-
-                    <a class="nav-link" href="#">Favorites</a>
-
-                </li>
-
-                <li class="nav-item">
-
-                    <a class="nav-link" href="about.html">About</a>
-
-                </li>
-
-            </ul>
-
-    </nav>
-
-<section>
-
-        <span class="footer-textr justify-content-center">
-
-          Copyright 2019 &nbsp;
-
-        </span>
-        
-
-</footer>
-
-
-</body>
-
 
 </html
