--- a/searchResults.html
+++ b/searchResults.html
@@ -12,7 +12,6 @@
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script src="searchResults.js"></script>
 </head>
 
 <body>
@@ -54,12 +53,43 @@
     </div>
   </nav>
   <!--  -->
+  <div id="side-menu" class="side-nav">
+    <h1>Favorites List</h1>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-lg">
+          <!--  -->
+          <div data-toggle="modal" data-target="#exampleModal" class="card text-center mx-auto bg-custom myBtn style="
+            width: 5rem;">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <h6 class="card-subtitle mb-2">Card subtitle</h6>
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+              <a href="#" class="card-link">Card link</a>
+              <a href="#" class="card-link">Another link</a>
+            </div>
+          </div>
+          <!--  -->
+        </div>
+        <div id="star" class="col-lg-1 text-center">
+          <!--  -->
+          &#128970;
+          <!--  -->
+        </div>
+      </div>
+    </div>
+  </div>
+  <!--  -->
   <main>
     <div class="container-fluid">
       <div class="row">
         <div class="col-lg">
           <!--  -->
-          <div class="card text-center mx-auto bg-custom style=" width: 5rem;">
+          <div data-toggle="modal" data-target="#exampleModal" class="card text-center mx-auto bg-custom myBtn style="
+            width: 5rem;">
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
               <h6 class="card-subtitle mb-2">Card subtitle</h6>
@@ -75,7 +105,8 @@
         </div>
         <div class="col-lg">
           <!--  -->
-          <div class="card text-center mx-auto bg-custom style=" width: 5rem;">
+          <div data-toggle="modal" data-target="#exampleModal" class="card text-center mx-auto bg-custom style=" width:
+            5rem;">
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
               <h6 class="card-subtitle mb-2">Card subtitle</h6>
@@ -91,58 +122,8 @@
         </div>
         <div class="col-lg">
           <!--  -->
-          <div class="card text-center mx-auto bg-custom style=" width: 5rem;">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <h6 class="card-subtitle mb-2">Card subtitle</h6>
-              <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
-              </p>
-              <a href="#" class="card-link">Card link</a>
-              <a href="#" class="card-link">Another link</a>
-            </div>
-          </div>
-          <!--  -->
-        </div>
-      </div>
-      <!--  -->
-      <div class="row">
-        <div class="col-lg">
-          <!--  -->
-          <div class="card text-center mx-auto bg-custom style=" width: 5rem;">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <h6 class="card-subtitle mb-2">Card subtitle</h6>
-              <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
-              </p>
-              <a href="#" class="card-link">Card link</a>
-              <a href="#" class="card-link">Another link</a>
-            </div>
-          </div>
-          <!--  -->
-        </div>
-        <div class="col-lg">
-          <!--  -->
-          <div class="card text-center mx-auto bg-custom style=" width: 5rem;">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <h6 class="card-subtitle mb-2">Card subtitle</h6>
-              <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
-              </p>
-              <a href="#" class="card-link">Card link</a>
-              <a href="#" class="card-link">Another link</a>
-            </div>
-          </div>
-          <!--  -->
-        </div>
-        <div class="col-lg">
-          <!--  -->
-          <div class="card text-center mx-auto bg-custom style=" width: 5rem;">
+          <div data-toggle="modal" data-target="#exampleModal" class="card text-center mx-auto bg-custom style=" width:
+            5rem;">
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
               <h6 class="card-subtitle mb-2">Card subtitle</h6>
@@ -161,7 +142,8 @@
       <div class="row">
         <div class="col-lg">
           <!--  -->
-          <div class="card text-center mx-auto bg-custom style=" width: 5rem;">
+          <div data-toggle="modal" data-target="#exampleModal" class="card text-center mx-auto bg-custom style=" width:
+            5rem;">
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
               <h6 class="card-subtitle mb-2">Card subtitle</h6>
@@ -177,7 +159,8 @@
         </div>
         <div class="col-lg">
           <!--  -->
-          <div class="card text-center mx-auto bg-custom style=" width: 5rem;">
+          <div data-toggle="modal" data-target="#exampleModal" class="card text-center mx-auto bg-custom style=" width:
+            5rem;">
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
               <h6 class="card-subtitle mb-2">Card subtitle</h6>
@@ -193,58 +176,8 @@
         </div>
         <div class="col-lg">
           <!--  -->
-          <div class="card text-center mx-auto bg-custom style=" width: 5rem;">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <h6 class="card-subtitle mb-2">Card subtitle</h6>
-              <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
-              </p>
-              <a href="#" class="card-link">Card link</a>
-              <a href="#" class="card-link">Another link</a>
-            </div>
-          </div>
-          <!--  -->
-        </div>
-      </div>
-      <!--  -->
-      <div class="row">
-        <div class="col-lg">
-          <!--  -->
-          <div class="card text-center mx-auto bg-custom style=" width: 5rem;">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <h6 class="card-subtitle mb-2">Card subtitle</h6>
-              <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
-              </p>
-              <a href="#" class="card-link">Card link</a>
-              <a href="#" class="card-link">Another link</a>
-            </div>
-          </div>
-          <!--  -->
-        </div>
-        <div class="col-lg">
-          <!--  -->
-          <div class="card text-center mx-auto bg-custom style=" width: 5rem;">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <h6 class="card-subtitle mb-2">Card subtitle</h6>
-              <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
-              </p>
-              <a href="#" class="card-link">Card link</a>
-              <a href="#" class="card-link">Another link</a>
-            </div>
-          </div>
-          <!--  -->
-        </div>
-        <div class="col-lg">
-          <!--  -->
-          <div class="card text-center mx-auto bg-custom style=" width: 5rem;">
+          <div data-toggle="modal" data-target="#exampleModal" class="card text-center mx-auto bg-custom style=" width:
+            5rem;">
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
               <h6 class="card-subtitle mb-2">Card subtitle</h6>
@@ -263,7 +196,8 @@
       <div class="row">
         <div class="col-lg">
           <!--  -->
-          <div class="card text-center mx-auto bg-custom style=" width: 5rem;">
+          <div data-toggle="modal" data-target="#exampleModal" class="card text-center mx-auto bg-custom style=" width:
+            5rem;">
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
               <h6 class="card-subtitle mb-2">Card subtitle</h6>
@@ -279,7 +213,8 @@
         </div>
         <div class="col-lg">
           <!--  -->
-          <div class="card text-center mx-auto bg-custom style=" width: 5rem;">
+          <div data-toggle="modal" data-target="#exampleModal" class="card text-center mx-auto bg-custom style=" width:
+            5rem;">
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
               <h6 class="card-subtitle mb-2">Card subtitle</h6>
@@ -295,7 +230,116 @@
         </div>
         <div class="col-lg">
           <!--  -->
-          <div class="card text-center mx-auto bg-custom style=" width: 5rem;">
+          <div data-toggle="modal" data-target="#exampleModal" class="card text-center mx-auto bg-custom style=" width:
+            5rem;">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <h6 class="card-subtitle mb-2">Card subtitle</h6>
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+              <a href="#" class="card-link">Card link</a>
+              <a href="#" class="card-link">Another link</a>
+            </div>
+          </div>
+          <!--  -->
+        </div>
+      </div>
+      <!--  -->
+      <div class="row">
+        <div class="col-lg">
+          <!--  -->
+          <div data-toggle="modal" data-target="#exampleModal" class="card text-center mx-auto bg-custom style=" width:
+            5rem;">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <h6 class="card-subtitle mb-2">Card subtitle</h6>
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+              <a href="#" class="card-link">Card link</a>
+              <a href="#" class="card-link">Another link</a>
+            </div>
+          </div>
+          <!--  -->
+        </div>
+        <div class="col-lg">
+          <!--  -->
+          <div data-toggle="modal" data-target="#exampleModal" class="card text-center mx-auto bg-custom style=" width:
+            5rem;">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <h6 class="card-subtitle mb-2">Card subtitle</h6>
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+              <a href="#" class="card-link">Card link</a>
+              <a href="#" class="card-link">Another link</a>
+            </div>
+          </div>
+          <!--  -->
+        </div>
+        <div class="col-lg">
+          <!--  -->
+          <div data-toggle="modal" data-target="#exampleModal" class="card text-center mx-auto bg-custom style=" width:
+            5rem;">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <h6 class="card-subtitle mb-2">Card subtitle</h6>
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+              <a href="#" class="card-link">Card link</a>
+              <a href="#" class="card-link">Another link</a>
+            </div>
+          </div>
+          <!--  -->
+        </div>
+      </div>
+      <!--  -->
+      <div class="row">
+        <div class="col-lg">
+          <!--  -->
+          <div data-toggle="modal" data-target="#exampleModal" class="card text-center mx-auto bg-custom style=" width:
+            5rem;">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <h6 class="card-subtitle mb-2">Card subtitle</h6>
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+              <a href="#" class="card-link">Card link</a>
+              <a href="#" class="card-link">Another link</a>
+            </div>
+          </div>
+          <!--  -->
+        </div>
+        <div class="col-lg">
+          <!--  -->
+          <div data-toggle="modal" data-target="#exampleModal" class="card text-center mx-auto bg-custom style=" width:
+            5rem;">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <h6 class="card-subtitle mb-2">Card subtitle</h6>
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+              <a href="#" class="card-link">Card link</a>
+              <a href="#" class="card-link">Another link</a>
+            </div>
+          </div>
+          <!--  -->
+        </div>
+        <div class="col-lg">
+          <!--  -->
+          <div data-toggle="modal" data-target="#exampleModal" class="card text-center mx-auto bg-custom style=" width:
+            5rem;">
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
               <h6 class="card-subtitle mb-2">Card subtitle</h6>
@@ -313,22 +357,58 @@
     </div>
   </main>
 
+  <!-- Modal -->
+  <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <img src="flowers.jpg" alt="image" class="img-fluid">
+          <p>&#128970; &#128970; &#128970; &#128970; &#128970; $ $ $ $ $</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed interdum pharetra finibus. Nullam placerat
+            vehicula neque, non dapibus velit pharetra at. Mauris pulvinar eleifend pellentesque. Vivamus interdum
+            semper ante a efficitur. Aenean venenatis eget sem non ullamcorper. Quisque finibus lacus justo, et
+            tristique turpis ullamcorper et. Fusce eget massa eget lorem condimentum lobortis. Fusce vehicula ex ac eros
+            hendrerit, pharetra eleifend sem iaculis. Vestibulum a consectetur sem. Proin condimentum pulvinar ante, sed
+            dignissim enim laoreet in. Donec accumsan pretium ligula in lobortis. Mauris hendrerit lectus et massa
+            porttitor rutrum. Aliquam vulputate laoreet libero, sed vestibulum elit eleifend ac. Fusce vel iaculis
+            metus.</p>
+        </div>
+        <div class="modal-footer">
+          <a href="https://google.com" target="_blank">Visit Google</a>
+          <a href="https://google.com" target="_blank">Visit Google</a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
   <footer>
-    <button class="circleButton"></button>
-    <button class="circleButton"></button>
-    <button class="circleButton"></button>
+    <button class="circleButton"><a href="home.html"></a></button>
+    <button class="circleButton"><a href="about.html"></a></button>
+    <button class="circleButton" onclick="openSlideMenu()"></button>
+
     <div class="rightdiv">
       <button class="circleButton"></button>
       <button class="circleButton"></button>
     </div>
   </footer>
 
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
     integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
     crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
     crossorigin="anonymous"></script>
+  <script src="searchResults.js"></script>
+
 </body>
 
 </html>
