removed unused code

--- a/searchResults.html
+++ b/searchResults.html
@@ -369,7 +369,7 @@
           </button>
         </div>
         <div class="modal-body">
-          <img src="flowers.jpg" alt="image" class="img-fluid">
+          <img src="/images/flowers.jpg" alt="image" class="img-fluid">
           <p>&#128970; &#128970; &#128970; &#128970; &#128970; $ $ $ $ $</p>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed interdum pharetra finibus. Nullam placerat
             vehicula neque, non dapibus velit pharetra at. Mauris pulvinar eleifend pellentesque. Vivamus interdum
