--- a/searchResults.html
+++ b/searchResults.html
@@ -390,8 +390,8 @@
 
   <footer>
     <div class="leftdiv">
-      <a href="http://google.com" class="gh">Home</a>
-      <a href="http://google.com" class="gh">About</a>
+      <a href="home.html" class="gh">Home</a>
+      <a href="about.html" class="gh">About</a>
       <a href="" onclick="openSlideMenu()" class="gh">Favorites</a>
     </div>
 
