--- a/searchResults.html
+++ b/searchResults.html
@@ -392,7 +392,7 @@
     <div class="leftdiv">
       <a href="home.html" class="gh">Home</a>
       <a href="about.html" class="gh">About</a>
-      <a href="" onclick="openSlideMenu()" class="gh">Favorites</a>
+      <a href="#" onclick="openSlideMenu()" class="gh">Favorites</a>
     </div>
 
     <div class="rightdiv">
