--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
 </body>
 
 <footer>
-        <a href="home.html"><button class="circleButton"></button></a>
+        <a href="home.html"><button class="circleButton">Home</button></a>
 </footer>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
