--- a/about.html
+++ b/about.html
@@ -5,7 +5,8 @@
     <meta charset="utf-8">
     <title>About Us - Boston Crave</title>
     <link rel="stylesheet" href="about.css" />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <script src="about.js"></script>
 </head>
 
@@ -14,19 +15,20 @@
         <h1>About Us</h1>
     </header>
 
-    <section id="view">
-    </section>
+    <div id="view">
+        <div id="view-image"></div>
+        <h2 id="crave-title">Boston Crave</h2>
+    </div>
 
     <main>
         <br>
         <div id="crave">
-            <h2 id="crave-title">What is Boston Crave?</h2>
-            <p id="crave-desc">At Boston Crave our goal is to satisfy your appetite, wherever and whenever. 
-                Our team of developers are located in Boston, and we understand how difficult 
-                it can be to decide where you want to eat or drink. In this great city, the options 
-                are so diverse, and we want to help you find the right restaurant and bar that will 
-                satisfy you. With our service you’ll be able to find the closest bars and restaurants 
-                in Boston that satisfy your craving. Let us know what you’re in the mood for, and 
+             <p id="crave-desc">At Boston Crave our goal is to satisfy your appetite, wherever and whenever.
+                Our team of developers are located in Boston, and we understand how difficult
+                it can be to decide where you want to eat or drink. In this great city, the options
+                are so diverse, and we want to help you find the right restaurant and bar that will
+                satisfy you. With our service you’ll be able to find the closest bars and restaurants
+                in Boston that satisfy your craving. Let us know what you’re in the mood for, and
                 we’ll do the work to find you exactly what you want and nothing less.</p>
         </div>
         <br>
@@ -38,7 +40,7 @@
                     <img src="dev_default.png">
                     <h3>Chris Dombele</h3>
                 </div>
-                
+
                 <div class="dev-card">
                     <img src="dev_default.png">
                     <h3>Charlie Plukfangpanya</h3>
@@ -54,14 +56,14 @@
 </body>
 
 <footer>
-        <a href="home.html"><button class="circleButton">Home</button></a>
+    <a href="home.html"><button class="circleButton">Home</button></a>
 </footer>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-crossorigin="anonymous"></script>
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-crossorigin="anonymous"></script>
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"></script>
 
 </html>
