--- a/old-stuff/searchResults.html
+++ b/old-stuff/searchResults.html
@@ -29,7 +29,7 @@
           </div>
           <div class="col-lg text-center">
             <span>Rating:</span><br />
-            <select>
+            <select class="drop">
               <option value="1">&#128970;</option>
               <option value="2">&#128970;&#128970;</option>
               <option value="3">&#128970;&#128970;&#128970;</option>
@@ -39,7 +39,7 @@
           </div>
           <div class="col-lg text-center">
             <span>Price:</span><br />
-            <select>
+            <select class="drop">
               <option value="1">$</option>
               <option value="2">$$</option>
               <option value="3">$$$</option>
