Fixed logo icon

--- a/old-stuff/home.html
+++ b/old-stuff/home.html
@@ -12,8 +12,7 @@
 </head>
 
 <body>
-    <div class="shadow"><img class="logo" src="LogoOpt.png" alt="Crave Logo" />
-    </div>
+    <div id="logo"></div>
 
     <div class="search_bar">
       <form class="form-inline">
