--- a/old-stuff/home.html
+++ b/old-stuff/home.html
@@ -1,25 +1,31 @@
 <!DOCTYPE html>
-
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-    integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-  <link rel="stylesheet" href="home.css">
+	<title>Boston Crave</title>
+     <meta charset="UTF-8">
+     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
+     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+     <link rel="stylesheet" href="home.css">
 </head>
 
 <body>
-    <div id="logo"></div>
-
-    <div class="search_bar">
-      <form class="form-inline">
-        <input class="form-control" type="search" placeholder="What's your crave?" aria-label="Search">
-        <a href="searchResults.html" class="btn btn-danger">Search</a>
-      </form>
-    </div>
+     <section id="home" background-ratio="0.5">
+          <div class="overlay"></div>
+          <div class="container">
+               <div class="row">
+                    <div class="col-md-offset-3 col-md-6 col-sm-12">
+                         <img src="LogoOpt.png" class="img-responsive" alt="Crave Logo" height="800" width="600">
+                         <div class="home-info">
+                              <form action="" method="get" class="online-form">
+                                   <input type="text" name="text" class="form-control" placeholder="What's Your Crave?" required="">
+                                   <button type="submit" class="form-control">Search</button>
+                              </form>
+                         </div>
+                    </div>
+               </div>
+          </div>
+     </section>
 </body>
 
 </html>
