submit button fixed

--- a/old-stuff/home.html
+++ b/old-stuff/home.html
@@ -17,7 +17,7 @@
                     <div class="col-md-offset-3 col-md-6 col-sm-12">
                          <img src="LogoOpt.png" class="img-responsive" alt="Crave Logo" height="800" width="600">
                          <div class="home-info">
-                              <form action="" method="get" class="online-form">
+                              <form action="searchResults.html" method="get" class="online-form">
                                    <input type="text" name="text" class="form-control" placeholder="What's Your Crave?" required="">
                                    <button type="submit" class="form-control">Search</button>
                               </form>
